--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
+*.code-workspace
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
@@ -64,6 +66,8 @@ db.sqlite3-journal
 # Flask stuff:
 instance/
 .webassets-cache
+*.pyc
+__pycache__/
 
 # Scrapy stuff:
 .scrapy
