--- a/docker/dockerfile.sonic
+++ b/docker/dockerfile.sonic
@@ -23,7 +23,7 @@ CMD ["sh", "-c", "flask init-db && flask run --host=0.0.0.0"]
 
 LABEL org.opencontainers.image.created="${BUILD_DATE}" \
       org.opencontainers.image.title="sonic-poc" \
-      org.opencontainers.image.authors="Anax <anax@anax.anax>" \
+      org.opencontainers.image.authors="thefueley <5083152+thefueley@users.noreply.github.com>" \
       org.opencontainers.image.source="https://github.com/thefueley/sonic-poc" \
       org.opencontainers.image.revision="${BUILD_REF}" \
       org.opencontainers.image.vendor="SONIC" \
