--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -24,10 +24,10 @@ stages:
         steps:
           - script: |
               echo Build Docker Image
-              make build
+              make build VERSION=$(Build.BuildId)
           - script: |
               echo Push Docker Image
-              make push
+              make push VERSION=$(Build.BuildId)
 
   - stage: UnitTests
     displayName: 'UnitTests'
@@ -50,5 +50,5 @@ stages:
               scriptType: 'bash'
               scriptLocation: 'inlineScript'
               inlineScript: |
-                az webapp config container set --name SONIC --resource-group SONIC --docker-custom-image-name thefueley/sonic-poc:$(Build.BuildId)
+                az webapp config container set --name SONIC --resource-group SONIC --container-image-name thefueley/sonic-poc:$(Build.BuildId)
                 az webapp config appsettings set --name SONIC --resource-group SONIC --settings WEBSITES_PORT=5000
