--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,22 @@
+alembic==1.14.0
 blinker==1.8.2
 click==8.1.7
 coverage==7.6.1
 Flask==3.0.3
+Flask-Migrate==4.0.7
+Flask-SQLAlchemy==3.1.1
+greenlet==3.1.1
 iniconfig==2.0.0
 itsdangerous==2.2.0
 Jinja2==3.1.4
 logging==0.4.9.6
+Mako==1.3.6
 MarkupSafe==2.1.5
 packaging==24.1
 pluggy==1.5.0
 pyproject_hooks==1.2.0
 pytest==8.3.3
+SQLAlchemy==2.0.36
+typing_extensions==4.12.2
+waitress==3.0.1
 Werkzeug==3.0.4
