--- a/requirements.txt
+++ b/requirements.txt
@@ -1,22 +1,40 @@
 alembic==1.14.0
+astroid==3.3.5
+black==24.10.0
 blinker==1.8.2
+cfgv==3.4.0
 click==8.1.7
 coverage==7.6.1
+dill==0.3.9
+distlib==0.3.9
+filelock==3.16.1
 Flask==3.0.3
 Flask-Migrate==4.0.7
 Flask-SQLAlchemy==3.1.1
 greenlet==3.1.1
+identify==2.6.1
 iniconfig==2.0.0
+isort==5.13.2
 itsdangerous==2.2.0
 Jinja2==3.1.4
 logging==0.4.9.6
 Mako==1.3.6
 MarkupSafe==2.1.5
+mccabe==0.7.0
+mypy-extensions==1.0.0
+nodeenv==1.9.1
 packaging==24.1
+pathspec==0.12.1
+platformdirs==4.3.6
 pluggy==1.5.0
+pre_commit==4.0.1
+pylint==3.3.1
 pyproject_hooks==1.2.0
 pytest==8.3.3
+PyYAML==6.0.2
 SQLAlchemy==2.0.36
+tomlkit==0.13.2
 typing_extensions==4.12.2
+virtualenv==20.27.1
 waitress==3.0.1
 Werkzeug==3.0.4
