--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -64,7 +64,7 @@ stages:
               scriptLocation: 'inlineScript'
               inlineScript: |
                 az webapp config container set --name SONIC --resource-group SONIC --container-image-name thefueley/sonic-poc:$(Build.BuildId)
-                az webapp config appsettings set --name SONIC --resource-group SONIC --settings WEBSITES_PORT=5000
+                az webapp config appsettings set --name SONIC --resource-group SONIC --settings WEBSITES_PORT=5000 APP_VERSION=$(Build.BuildId)
           - script: |
               echo Notify Discord
               chmod +x scripts/notify_discord.sh
