--- a/docker/dockerfile.sonic
+++ b/docker/dockerfile.sonic
@@ -2,6 +2,7 @@
 FROM python:3.12.6-alpine3.20 AS build-sonic
 ARG BUILD_REF
 ARG BUILD_DATE
+ARG APP_VERSION
 
 WORKDIR /sonic
 COPY . /sonic
@@ -18,6 +19,7 @@ USER sonic
 
 # Set environment variables
 ENV FLASK_APP=sonic
+ENV APP_VERSION=${APP_VERSION}
 
 CMD ["sh", "-c", "flask init-db && waitress-serve --ident=OlympiLearn --port=5000 --call 'sonic:create_app'"]
 
