--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -9,3 +9,6 @@ repos:
     rev: v3.3.1  # Use the latest stable version of Pylint
     hooks:
       - id: pylint
+        args: ["--errors-only"]
+        entry: python -m pylint
+        language: system
